Fixed overflow

--- a/src/app/stock-list/stock-list.component.sass
+++ b/src/app/stock-list/stock-list.component.sass
@@ -12,7 +12,6 @@ $color-pink: #f52ab5;
 
 .mat-table
   background: #e2e1e0;
-  overflow: auto;
   display: block;
   max-height: 500px;
 
